namespace CryptoArbitrage.Engine.DesignPatterns.AbstractFactory;

/// <summary>
/// ConcreteProductB2 - Kraken implementation of analytics tool
/// Equivalent to ConcreteProductB2 from the diagram
/// </summary>
public class KrakenAnalyticsTool : IAnalyticsTool
{
    public string ExchangeName => "Kraken";

    public string AnalyzeMarketTrends(string cryptoPair)
    {
        return $@"[KRAKEN ANALYTICS] Market Trend Analysis:
Pair: {cryptoPair}
Trend: BEARISH (24h: -1.8%)
Volume: Medium (>500 BTC equivalent)
Support Level: $44,800
Resistance Level: $46,500
RSI: 42.1 (Oversold)
Moving Average: Below 50-day MA
Data Source: Kraken Pro Charts";
    }

    public decimal CalculateVolatility(string cryptoPair, int periodDays)
    {
        // Simulate Kraken-specific volatility calculation
        var random = new Random();
        decimal baseVolatility = (decimal)(random.NextDouble() * 15 + 8); // 8-23%
        return Math.Round(baseVolatility, 2);
    }

    public string GenerateTradingSignals(string cryptoPair)
    {
        return $@"[KRAKEN SIGNALS] Trading Signals:
Pair: {cryptoPair}
Signal: HOLD (Confidence: 65%)
Entry Point: Wait for breakout
Stop Loss: -3.0%
Take Profit: +3.8%
Signal Based On: Kraken Order Book + Technical Analysis
Generated: {DateTime.Now}";
    }
}