namespace CryptoArbitrage.Engine.DesignPatterns.AbstractFactory;

/// <summary>
/// ConcreteProductB1 - Binance implementation of analytics tool
/// Equivalent to ConcreteProductB1 from the diagram
/// </summary>
public class BinanceAnalyticsTool : IAnalyticsTool
{
    public string ExchangeName => "Binance";

    public string AnalyzeMarketTrends(string cryptoPair)
    {
        return $@"[BINANCE ANALYTICS] Market Trend Analysis:
Pair: {cryptoPair}
Trend: BULLISH (24h: +3.2%)
Volume: High (>1000 BTC equivalent)
Support Level: $45,200
Resistance Level: $47,800
RSI: 65.4 (Neutral to Overbought)
Moving Average: Above 20-day MA
Data Source: Binance Advanced Charts";
    }

    public decimal CalculateVolatility(string cryptoPair, int periodDays)
    {
        // Simulate Binance-specific volatility calculation
        var random = new Random();
        decimal baseVolatility = (decimal)(random.NextDouble() * 20 + 5); // 5-25%
        return Math.Round(baseVolatility, 2);
    }

    public string GenerateTradingSignals(string cryptoPair)
    {
        return $@"[BINANCE SIGNALS] Trading Signals:
Pair: {cryptoPair}
Signal: BUY (Confidence: 78%)
Entry Point: Market Price
Stop Loss: -2.5%
Take Profit: +4.2%
Signal Based On: Binance Volume Profile + Price Action
Generated: {DateTime.Now}";
    }
}